sumo/tests/traci/get_variable/ArealDetector/errors/UnknownAD/errors.traci
Error: Answered with error to command 142: Areal detector 'xxx' is not known
